--- a/src/main/resources/templates/users/joinform.html
+++ b/src/main/resources/templates/users/joinform.html
@@ -6,9 +6,18 @@
 <body>
 <h1>회원가입</h1>
 <form method="post" th:action="@{/users/join}" th:object="${user}" action="#">
-    <p>name: <input type="text" th:field="*{name}" /></p>
-    <p>email: <input type="text" th:field="*{email}" /></p>
-    <p>password: <input type="password" th:field="*{password}" /></p>
+    <p>이름: <input type="text" th:field="*{name}" /></p>
+    <p>이메일: <input type="text" th:field="*{email}" /></p>
+    <p>비밀번호: <input type="password" name = "pw1" th:field="*{password}" /></p>
+    <p>비밀번호 확인: <input type="password" name="pw2" /></p>
+    <p>우편번호: <input type="text" th:field="*{zipcode}" /></p>
+    <p>기본주소: <input type="text" th:field="*{addr1}" /></p>
+    <p>상세주: <input type="text" th:field="*{addr2}" /></p>
+    <p>휴대전화:<select name="phone">
+        <option value="010">010</option>
+        <option value="011">011</option>
+     th:field="*{phone1}" />-<input type="text" th:field="*{phone2}" />
+                                                         -<input type="text" th:field="*{phone3}" /></p>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 </body>
