--- a/src/main/resources/templates/fragments/main/main_body.html
+++ b/src/main/resources/templates/fragments/main/main_body.html
@@ -2,6 +2,7 @@
 <html lang="ko" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <body th:fragment="mainBody">
+<th:block th:include="fragments/common/common_header"></th:block>
 <th:block th:include="fragments/common/common_body"></th:block>
 <th:block th:include="fragments/common/common_footer"></th:block>
 </body>
