--- a/src/main/resources/templates/fragments/common/common_footer.html
+++ b/src/main/resources/templates/fragments/common/common_footer.html
@@ -1,3 +1,28 @@
-<footer class="footer">
-
+<footer class="container py-5">
+    <div class="row">
+        <div class="col-12 col-md">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mb-2"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
+            <small class="d-block mb-3 text-muted">&copy; 2018 Copyright StickerShop. All rights reserved.</small>
+        </div>
+        <div class="col-6 col-md">
+            <div style="padding-bottom: 10px"><h5>About</h5></div>
+            <ul class="list-unstyled text-small text-muted">
+                <li><small class="d-block text-muted">주식회사 스티커샵 | 대표 SNS</small></li>
+                <li><small class="d-block text-muted">[사업자등록번호] 331-90-201805</small></li>
+                <li><small class="d-block text-muted">[통신판매업신고] 2018-서울강남-9087</small></li>
+                <li><small class="d-block text-muted">[사업자정보확인]</small></li>
+                <li><small class="d-block text-muted">사업장주소 : 서울특별시 강남구 강남대로 364</small></li>
+                <li><small class="d-block text-muted">미왕빌딩 11층 D강의실</small></li>
+            </ul>
+        </div>
+        <div class="col-6 col-md">
+            <div style="padding-bottom: 10px"><h5>Contact</h5></div>
+            <ul class="list-unstyled text-small text-muted">
+                <li><small class="d-block text-muted">Tel. 02-4343-8282</small></li>
+                <li><small class="d-block text-muted">Email. sehwakm@gmail.com</small></li>
+                <li><small class="d-block text-muted">평일 10:00 - 18:00</small></li>
+                <li><small class="d-block text-muted">(토/일/공휴일 휴무)</small></li>
+            </ul>
+        </div>
+    </div>
 </footer>
