update: 로그인폼, 회원가입폼 수정

--- a/src/main/resources/templates/fragments/common/common_header.html
+++ b/src/main/resources/templates/fragments/common/common_header.html
@@ -120,7 +120,7 @@
 <div id="userMenu">
     <div id="userDiv">
         <div id="btnDiv"><button type="button" id="userBtn" onclick="window.location.href='users/login'">로그인</button></div>
-        <small>아직 계정이 없으신가요?<br/><a th:href="@{users/join}"><strong>지금 가입하십시오.</strong></a></small>
+        <small>아직 계정이 없으신가요?<br/><a th:href="@{users/joinform}"><strong>지금 가입하십시오.</strong></a></small>
     </div>
     <hr>
     <ul id="userList">
