--- a/src/main/resources/templates/users/joinform.html
+++ b/src/main/resources/templates/users/joinform.html
@@ -1,24 +1,70 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>회원가입폼</title>
-</head>
-<body>
-<h1>회원가입</h1>
-<form method="post" th:action="@{/users/join}" th:object="${user}" action="#">
-    <p>이름: <input type="text" th:field="*{name}" /></p>
-    <p>이메일: <input type="text" th:field="*{email}" /></p>
-    <p>비밀번호: <input type="password" name = "pw1" th:field="*{password}" /></p>
-    <p>비밀번호 확인: <input type="password" name="pw2" /></p>
-    <p>우편번호: <input type="text" th:field="*{zipcode}" /></p>
-    <p>기본주소: <input type="text" th:field="*{addr1}" /></p>
-    <p>상세주: <input type="text" th:field="*{addr2}" /></p>
-    <p>휴대전화:<select name="phone">
-        <option value="010">010</option>
-        <option value="011">011</option>
-     th:field="*{phone1}" />-<input type="text" th:field="*{phone2}" />
-                                                         -<input type="text" th:field="*{phone3}" /></p>
-    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
-</form>
-</body>
-</html>
+<html lang="ko" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layout/main_layout">
+
+<th:block layout:fragment="html_head">
+    <title>회원 가입 하기</title>
+</th:block>
+<th:block layout:fragment="body_main">
+    <br><br>
+    <div style="margin-left: 75px"><h2>회원가입</h2></div>
+    <hr style="padding-bottom: 40px">
+    <div class="container" style="padding-bottom: 100px;">
+        <div style="width: 30%; margin: auto;">
+        <form method="post" th:action="@{/users/join}" th:object="${user}" action="#">
+            <div style="padding-bottom: 25px;">
+                <label for="name"><small>이름</small></label>
+                <input type="text" class="form-control" id="name" th:field="*{name}" />
+            </div>
+            <div style="padding-bottom: 25px;">
+                <label for="email"><small>이메일</small></label>
+                <input type="text" class="form-control" id="email" th:field="*{email}" />
+            </div>
+            <div style="padding-bottom: 25px;">
+                <label for="pw1"><small>비밀번호</small></label>
+                <input type="password" class="form-control" id="pw1" name = "pw1" th:field="*{password}" />
+            </div>
+            <div style="padding-bottom: 25px;">
+                <label for="pw2"><small>비밀번호 확인</small></label>
+                <input type="password" class="form-control" id="pw2" name="pw2"/>
+            </div>
+            <div>
+                <label for="zipcode"><small>상세주소</small></label>
+            </div>
+            <div style="padding-bottom: 10px;">
+                <div>
+                    <input type="text" class="form-control" id="zipcode" th:field="*{zipcode}" style="width: 40%;"/>
+                </div>
+                <!--<div>
+                    <button type="submit" class="btn btn-light"><small>주소 검색</small></button>
+                </div>-->
+            </div>
+            <div style="padding-bottom: 10px;">
+                <input type="text" class="form-control" id="addr1" th:field="*{addr1}" />
+            </div>
+            <div style="padding-bottom: 25px;">
+                <input type="text" class="form-control" id="addr2" th:field="*{addr2}" />
+            </div>
+            <div>
+                <label for="phone1"><small>휴대전화</small></label>
+            </div>
+            <div class="row" style="padding-bottom: 25px;">
+                <div class="col">
+                <select class="custom-select mr-sm-2" name="phone1" id="phone1">
+                    <option value="010">010</option>
+                    <option value="011">011</option>
+                </select>
+                </div>
+                <div class="col">
+                    <input type="text" class="form-control" th:field="*{phone2}" />
+                </div>
+                <div class="col">
+                    <input type="text" class="form-control" th:field="*{phone3}" />
+                </div>
+            </div>
+            <div style="margin: auto;">
+                <button type="submit" class="btn btn-dark"><small>가입 하기</small></button>
+            </div>
+        </form>
+        </div>
+    </div>
+</th:block>
