시큐리티 디펜던시 추가

--- a/src/main/resources/templates/users/loginform.html
+++ b/src/main/resources/templates/users/loginform.html
@@ -36,7 +36,7 @@
                         </div>
                     <button type="submit" class="btn btn-lg btn-block btn-light"><small>로그인</small></button>
                     <p style="padding-top: 5px"><small>또는</small></p>
-                    <button type="button" class="btn btn-lg btn-block btn-primary"><small>FACEBOOK 계정으로 로그인하기</small></button>
+                    <button type="button" class="btn btn-lg btn-block btn-primary" onclick="location.href='/sign-in/facebook'"><small>FACEBOOK 계정으로 로그인하기</small></button>
                     </form>
                 </div>
             </div>
