--- a/src/main/resources/templates/products/list.html
+++ b/src/main/resources/templates/products/list.html
@@ -30,17 +30,17 @@
                             <a th:href="@{/products}"><h3><strong>Stickers</strong></h3></a>
                         </div>
                         <ul class="product-list">
-                            <li><a th:href="@{/products}" style="color: MediumVioletRed">FrontEnd</a></li>
-                            <li><a th:href="@{/products}" style="color: GoldenRod">BackEnd</a></li>
-                            <li><a th:href="@{/products}" style="color: SeaGreen">Linux</a></li>
-                            <li><a th:href="@{/products}" style="color: MediumBlue">Tool</a></li>
-                            <li><a th:href="@{/products}" style="color: DeepPink">0원상품</a></li>
+                            <li><a th:href="@{/products(categoryId=1)}" style="color: MediumVioletRed">FrontEnd</a></li>
+                            <li><a th:href="@{/products(categoryId=2)}" style="color: GoldenRod">BackEnd</a></li>
+                            <li><a th:href="@{/products(categoryId=3)}" style="color: SeaGreen">Linux</a></li>
+                            <li><a th:href="@{/products(categoryId=4)}" style="color: MediumBlue">Tool</a></li>
+                            <li><a th:href="@{/products(categoryId=5)}" style="color: DeepPink">0원상품</a></li>
                         </ul>
                     </div>
                     <div class="col-9">
                         <div class="row" style="padding-top:20px; padding-bottom: 40px">
                             <div class="col" style="display: inline-block; text-align: left">
-                                total : 96 items
+                                total : <span th:text="${pager.getTotalCnt()}"></span> items
                             </div>
                             <div class="col" style="display: inline-block; text-align: right">
                                 <a th:href="@{/products}">판매량순</a>&nbsp;&nbsp;
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                         <div class="card-columns">
-                            <div class="card" th:if="${not #lists.isEmpty(list)}" th:each="product : ${list}">
+                            <div class="card" th:if="${not #lists.isEmpty(list.getContent())}" th:each="product : ${list}">
                                 <div style="text-align: right; margin: 5px">
                                     <a th:href="@{/}">
                                         <svg class="i-heart" viewBox="0 0 32 32" width="20" height="20" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
@@ -65,17 +65,17 @@
                             </div>
                         </div>
                         <div style="justify-content: center; padding-top: 25px; padding-bottom: 80px;">
-                            <ul class="pagination">
+                            <ul class="pagination" th:if="${not #lists.isEmpty(list.getContent())}">
                                 <li class="page-item" th:if="${pager.hasPrev()} == true">
-                                    <a class="page-link" th:href="@{/products}" aria-label="Previous">
+                                    <a class="page-link" th:href="@{/products(categoryId=${productSearch.categoryId}, page=${pager.startPage-1}, sort=${productSearch.sort}, keyword=${productSearch.keyword}, minPrice=${productSearch.minPrice}, maxPrice=${productSearch.maxPrice})}" aria-label="Previous">
                                         <span aria-hidden="true">&laquo;</span>
                                         <span class="sr-only">Previous</span>
                                     </a>
                                 </li>
                                 <li class="page-item" th:each="i : ${#numbers.sequence(pager.startPage, pager.endPage)}">
-                                    <a class="page-link" th:href="@{/products}" th:text="${i}"></a></li>
+                                    <a class="page-link" th:href="@{/products(categoryId=${productSearch.categoryId}, page=${i}, sort=${productSearch.sort}, keyword=${productSearch.keyword}, minPrice=${productSearch.minPrice}, maxPrice=${productSearch.maxPrice})}" th:text="${i}"></a></li>
                                 <li class="page-item" th:if="${pager.hasNext()} == true">
-                                    <a class="page-link" th:href="@{/products}" aria-label="Next">
+                                    <a class="page-link" th:href="@{/products(categoryId=${productSearch.categoryId}, page=${pager.endPage+1}, sort=${productSearch.sort}, keyword=${productSearch.keyword}, minPrice=${productSearch.minPrice}, maxPrice=${productSearch.maxPrice})}" aria-label="Next">
                                         <span aria-hidden="true">&raquo;</span>
                                         <span class="sr-only">Next</span>
                                     </a>
