--- a/src/main/resources/templates/products/list.html
+++ b/src/main/resources/templates/products/list.html
@@ -43,8 +43,8 @@
                                 total : <span th:text="${pager.getTotalCnt()}"></span> items
                             </div>
                             <div class="col" style="display: inline-block; text-align: right">
-                                <a th:href="@{/products}">판매량순</a>&nbsp;&nbsp;
-                                <a th:href="@{/products}">최신순</a>
+                                <a th:href="@{/products(sort='favor')}">판매량순</a>&nbsp;&nbsp;
+                                <a th:href="@{/products(sort='recent')}">최신순</a>
                             </div>
                         </div>
                         <div class="card-columns">
@@ -67,15 +67,15 @@
                         <div style="justify-content: center; padding-top: 25px; padding-bottom: 80px;">
                             <ul class="pagination" th:if="${not #lists.isEmpty(list.getContent())}">
                                 <li class="page-item" th:if="${pager.hasPrev()} == true">
-                                    <a class="page-link" th:href="@{/products(categoryId=${productSearch.categoryId}, page=${pager.startPage-1}, sort=${productSearch.sort}, keyword=${productSearch.keyword}, minPrice=${productSearch.minPrice}, maxPrice=${productSearch.maxPrice})}" aria-label="Previous">
+                                    <a class="page-link" th:href="@{/products(categoryId=${productSearch.categoryId}, page=${pager.startPage-1}, sort=${productSearch.sort})}" aria-label="Previous">
                                         <span aria-hidden="true">&laquo;</span>
                                         <span class="sr-only">Previous</span>
                                     </a>
                                 </li>
                                 <li class="page-item" th:each="i : ${#numbers.sequence(pager.startPage, pager.endPage)}">
-                                    <a class="page-link" th:href="@{/products(categoryId=${productSearch.categoryId}, page=${i}, sort=${productSearch.sort}, keyword=${productSearch.keyword}, minPrice=${productSearch.minPrice}, maxPrice=${productSearch.maxPrice})}" th:text="${i}"></a></li>
+                                    <a class="page-link" th:href="@{/products(categoryId=${productSearch.categoryId}, page=${i}, sort=${productSearch.sort})}" th:text="${i}"></a></li>
                                 <li class="page-item" th:if="${pager.hasNext()} == true">
-                                    <a class="page-link" th:href="@{/products(categoryId=${productSearch.categoryId}, page=${pager.endPage+1}, sort=${productSearch.sort}, keyword=${productSearch.keyword}, minPrice=${productSearch.minPrice}, maxPrice=${productSearch.maxPrice})}" aria-label="Next">
+                                    <a class="page-link" th:href="@{/products(categoryId=${productSearch.categoryId}, page=${pager.endPage+1}, sort=${productSearch.sort})}" aria-label="Next">
                                         <span aria-hidden="true">&raquo;</span>
                                         <span class="sr-only">Next</span>
                                     </a>
