--- a/src/main/resources/templates/products/search.html
+++ b/src/main/resources/templates/products/search.html
@@ -22,7 +22,7 @@
     <div style="text-align: center"><h2><strong>상품 검색</strong></h2></div>
     <hr style="padding-bottom: 40px">
     <div class="container-fluid" style="width: 50%;">
-        <div style="padding-bottom: 40px">
+        <div style="padding-bottom: 90px">
             <form method="get" th:action="@{/products}">
                 <div class="form-group row">
                     <label for="keyword" class="col-sm-2 col-form-label">검색어</label>
@@ -32,9 +32,11 @@
                 </div>
                 <div class="form-group row">
                     <label for="price" class="col-sm-2 col-form-label">판매가격대</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="price" name="minPrice" placeholder="">
-                        <input type="text" class="form-control" id="price2" name="maxPrice" placeholder="">
+                    <div class="col">
+                        <input type="text" class="form-control" id="price" name="minPrice">
+                    </div>
+                    <div class="col">
+                        <input type="text" class="form-control" id="price2" name="maxPrice">
                     </div>
                 </div>
                 <div class="form-group row">
@@ -48,10 +50,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-group row">
-                    <div style="text-align: center">
-                        <button type="submit" class="btn btn-primary">검색하기</button>
-                    </div>
+                <div class="text-center" style="padding-top: 20px;">
+                    <button type="submit" class="btn btn-dark">검색하기</button>
                 </div>
             </form>
         </div>
