--- a/src/main/resources/templates/fragments/common/common_header.html
+++ b/src/main/resources/templates/fragments/common/common_header.html
@@ -95,7 +95,7 @@
         </form>
         <ul class="nav navbar-nav navbar-right">
             <li style="padding-left: 20px;">
-                <a th:href="@{/}">
+                <a th:href="@{/users/list}">
                     <svg class="i-heart" viewBox="0 0 32 32" width="24" height="24" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                         <path d="M4 16 C1 12 2 6 7 4 12 2 15 6 16 8 17 6 21 2 26 4 31 6 31 12 28 16 25 20 16 28 16 28 16 28 7 20 4 16 Z" />
                     </svg>
