--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -3,6 +3,27 @@
 
 <th:block layout:fragment="html_head">
     <title>안녕하세요 스티커샵입니다.</title>
+    <script src="/js/bower_components/jquery/dist/jquery.js"></script>
+
+    <script>
+        function addWishlist(id){
+            $.ajax({
+                url : '/api/users/add',
+                method : 'post',
+                data : {"id" : id},
+
+                dataType: "text",
+                success : function (data) {
+                    alert(data);
+                    console.log(data);
+                },
+                error : function (err) {
+                    console.log(err.toString());
+                }
+            });
+        }
+
+    </script>
 </th:block>
 
 <th:block layout:fragment="body_main">
@@ -15,8 +36,8 @@
                 <div class="card-columns">
                     <div class="card" style="margin: 10px" th:if="${not #lists.isEmpty(list)}" th:each="product : ${list}">
                         <div style="text-align: right; margin: 5px">
-                            <a th:href="@{/}">
-                                <svg class="i-heart" viewBox="0 0 32 32" width="20" height="20" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+                            <a href="javascript:void(0);" th:onclick="'javascript:addWishlist(' + ${product.id} + ')'">
+                                <svg class="i-heart" id="heart" name="heart" viewBox="0 0 32 32" width="20" height="20" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                                     <path d="M4 16 C1 12 2 6 7 4 12 2 15 6 16 8 17 6 21 2 26 4 31 6 31 12 28 16 25 20 16 28 16 28 16 28 7 20 4 16 Z" />
                                 </svg>
                             </a>
