update: 장바구니 view 구현 및 장바구니 상품 추가 구현

--- a/src/main/resources/templates/fragments/common/common_header.html
+++ b/src/main/resources/templates/fragments/common/common_header.html
@@ -109,7 +109,7 @@
                 </div>
             </li>
             <li style="padding-left: 20px;">
-                <a th:href="@{/}">
+                <a th:href="@{/orders/basket}">
                     <svg class="i-cart" viewBox="0 0 32 32" width="24" height="24" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                         <path d="M6 6 L30 6 27 19 9 19 M27 23 L10 23 5 2 2 2" />
                         <circle cx="25" cy="27" r="2" />
