--- a/src/main/resources/templates/products/search.html
+++ b/src/main/resources/templates/products/search.html
@@ -16,6 +16,11 @@
             margin: 10px;
         }
     </style>
+    <script>
+        function addWishlist(productId) {
+            alert(productId);
+        }
+    </script>
 </th:block>
 <th:block layout:fragment="body_main">
     <br><br>
