--- a/src/main/resources/templates/fragments/common/common_header.html
+++ b/src/main/resources/templates/fragments/common/common_header.html
@@ -22,7 +22,7 @@
         left: 80%;
         top: 8%;
     }
-    #userDiv {
+    .userDiv {
         text-align: center;
         align-content: center;
     }
@@ -30,7 +30,7 @@
         padding-top: 10px;
         padding-bottom: 10px;
     }
-    #userBtn {
+    .userBtn {
         background: black;
         color: white;
         border: 0;
@@ -46,14 +46,14 @@
         font-size: 14px;
         font-weight: normal;
     }
-    .i-user{
+    #userIcon-login{
         fill: black;
     }
 </style>
 <script>
     $(document).ready(function () {
-        $("#i-user").mouseenter(function () {
-            $("#i-user").css('cursor', 'pointer');
+        $(".userIcon").mouseenter(function () {
+            $(".userIcon").css('cursor', 'pointer');
             $("#userMenu").css('display', 'block');
         });
         $("#userMenu").mouseleave(function () {
@@ -102,7 +102,12 @@
                 </a>
             </li>
             <li style="padding-left: 20px;">
-                <div id="i-user">
+                <div class="userIcon" sec:authorize="isAuthenticated()">
+                    <svg class="i-user" id="userIcon-login" viewBox="0 0 32 32" width="24" height="24" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+                        <path d="M22 11 C22 16 19 20 16 20 13 20 10 16 10 11 10 6 12 3 16 3 20 3 22 6 22 11 Z M4 30 L28 30 C28 21 22 20 16 20 10 20 4 21 4 30 Z" />
+                    </svg>
+                </div>
+                <div class="userIcon" sec:authorize="!isAuthenticated()">
                     <svg class="i-user" viewBox="0 0 32 32" width="24" height="24" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                         <path d="M22 11 C22 16 19 20 16 20 13 20 10 16 10 11 10 6 12 3 16 3 20 3 22 6 22 11 Z M4 30 L28 30 C28 21 22 20 16 20 10 20 4 21 4 30 Z" />
                     </svg>
@@ -121,14 +126,29 @@
     </div>
 </nav>
 <div id="userMenu">
-    <div id="userDiv" sec:authorize="!isAuthenticated()">
-        <div id="btnDiv"><button type="button" id="userBtn" onclick="window.location.href='users/login'">로그인</button></div>
-        <small>아직 계정이 없으신가요?<br/><a th:href="@{users/joinform}"><strong>지금 가입하십시오.</strong></a></small>
+    <div class="userDiv">
+        <div id="btnDiv">
+            <a sec:authorize="!isAuthenticated()" th:href="@{users/login}"><button type="button" class="userBtn">
+                로그인
+            </button></a>
+            <a sec:authorize="isAuthenticated()" th:href="@{/logout}"><button type="button" class="userBtn">
+                로그아웃
+            </button></a>
+        </div>
+        <small sec:authorize="!isAuthenticated()">아직 계정이 없으신가요?<br/><a th:href="@{users/joinform}"><strong>지금 가입하십시오.</strong></a></small>
     </div>
-    <hr>
+    <hr sec:authorize="!isAuthenticated()">
     <ul id="userList">
         <li>내 계정</li>
         <li>내 주문</li>
         <li>반품</li>
     </ul>
+    <!--<hr sec:authorize="isAuthenticated()">
+    <div class="userDiv" sec:authorize="isAuthenticated()">
+        <small>아래의 이메일로 로그인 되었습니다.</small>
+        <a th:href="@{/users/info}"><small><strong th:text="${loginUser.email}"></strong></small></a>
+    </div>
+    <div sec:authorize="isAuthenticated()">
+        <a th:href="@{/logout}"><small><i>로그아웃</i></small></a>
+    </div>-->
 </div>
