--- a/src/main/resources/templates/orders/basket.html
+++ b/src/main/resources/templates/orders/basket.html
@@ -17,30 +17,46 @@
 
     <script>
         $(function () {
-            $("#deleteAllButton").click(function () {
-                $("input[name=listId]:checked").each(function() {
-                    var listid = $(this).val();
+            $("#deleteAll").click(function() {
                     $.ajax({
                         url : '/api/basket/deleteAll',
-                        method : 'post',
-                        data : {"id" : listid},
+                        async: false,
+                        method : 'delete',
 
-                        dataType: "text",
                         success : function (data) {
                             alert('삭제되었습니다.. OK');
                             console.log(data);
-                            document.getElementById(listid).remove();
-
+                            document.getElementById(listDiv).remove();
+                            location.reload();
                         },
                         error : function (err) {
                             console.log(err.toString());
                         }
                     });
-                });
 
             }); // btn2 click
 
         });
+    </script>
+
+    <script>
+        function deleteBasketlist(id){
+            $.ajax({
+                url : '/api/basket/delete',
+                method : 'post',
+                data : {"id" : id},
+
+                dataType: "text",
+                success : function (data) {
+                    alert(data);
+                    console.log(data);
+                },
+                error : function (err) {
+                    console.log(err.toString());
+                }
+            });
+        }
+
     </script>
 </th:block>
 <th:block layout:fragment="body_main">
@@ -58,7 +74,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:if="${not #lists.isEmpty(list)}" th:each="item : ${list}">
+            <tr th:if="${not #lists.isEmpty(list)}" th:attrappend="id=${item.id}" th:each="item : ${list}">
                 <td style="vertical-align: middle"><input type="checkbox" aria-label="Checkbox for following text input" id="listId"
                                                                                                     name="listId"></td>
                 <td style="vertical-align: middle"><img class="img-thumbnail" width="100" height="100" th:src="@{${item.product.imagePath}}"></td>
@@ -83,8 +99,9 @@
                         <a href="#" class="btn btn-dark btn-sm" role="button" aria-pressed="true"><small>주문하기</small></a>
                     </div>
                     <div>
-                        <a href="#" class="btn btn-secondary btn-sm active" role="button" aria-pressed="true"
-                                                            id="deleteAllButton" name="deleteAllButton"><small>삭제</small></a>
+                        <a href="javascript:void(0);" class="btn btn-secondary btn-sm active" role="button" aria-pressed="true"
+                           th:onclick="'javascript:deleteBasketlist(' + ${item.id} + ')'" id="deleteButton" name="deleteButton"><small>삭제</small></a>
+
                     </div>
                 </td>
             </tr>
@@ -96,8 +113,10 @@
             = 합계 : <strong><span id="orderTot"></span></strong>
         </div>-->
         <div class="text-right" style="padding-top: 20px; padding-bottom: 20px">
-            <a href="/api/basket/delete" class="btn btn-dark btn-sm" role="button" aria-pressed="true"
-                                                    id="deleteButton" name="deleteButton"><small>장바구니 비우기</small></a>
+            <!--<a  th:href="@{/api/basket/deleteAll}" role="button" aria-pressed="true" th:onclick="deleteAll"-->
+                                                    <!--th:id="deleteAllButton" th:name="deleteAllButton"><small>장바구니 비우기</small></a>-->
+            <button type="button"class="btn btn-lg btn-block btn-primary" id="deleteAll" name="deleteAll" >
+                                                                                <small>장바구니 비우기</small></button>
         </div>
         <div class="text-center" style="padding-top: 30px; padding-bottom: 80px">
             <a href="#" class="btn btn-dark btn-sm active" role="button" aria-pressed="true"><small>전체상품주문</small></a>
