--- a/src/main/resources/templates/orders/basket.html
+++ b/src/main/resources/templates/orders/basket.html
@@ -3,61 +3,95 @@
 
 <th:block layout:fragment="html_head">
     <title>장바구니</title>
-    <style>
-        .underline {
-            border-left-width: 0;
-            border-right-width: 0;
-            border-top-width: 0;
-            border-bottom-width: 1;
-            border-color: lightgray;
+    <script>
+        $(document).ready(function (){
+
+            $('#orderSelected').click(function () {
+                var form = document.createElement("form");
+                form.setAttribute("method", "post");
+                form.setAttribute("action", "/orders/orderform");
+
+                $("input[type=checkbox]:checked").each(function () {
+                    var productId = this.id;
+                    var hiddenField = document.createElement("input");
+                    hiddenField.setAttribute("type", "hidden");
+                    hiddenField.setAttribute("name", "productId");
+                    hiddenField.setAttribute("value", productId);
+
+                    form.appendChild(hiddenField);
+                });
+
+                document.body.appendChild(form);
+                form.submit();
+            });
+
+        });
+
+        function orderOne(id){
+            var form = document.createElement("form");
+            form.setAttribute("method", "post");
+            form.setAttribute("action", "/orders/orderform");
+
+            var hiddenField = document.createElement("input");
+            hiddenField.setAttribute("type", "hidden");
+            hiddenField.setAttribute("name", "productId");
+            hiddenField.setAttribute("value", id);
+
+            form.appendChild(hiddenField);
+            document.body.appendChild(form);
+            form.submit();
         }
-    </style>
+
+    </script>
 </th:block>
 <th:block layout:fragment="body_main">
     <br><br>
     <div style="text-align: center"><h2><strong>장바구니</strong></h2></div>
     <hr style="padding-bottom: 40px">
     <div class="container-fluid" style="width: 60%;">
-        <table class="table" style="text-align: center;">
-            <thead class="thead-dark">
-            <tr>
-                <td scope="col"><input type="checkbox" aria-label="Checkbox for following text input"></td>
-                <td scope="col" colspan="3">제품</td>
-                <td scope="col">수량</td>
-                <td scope="col"></td>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:if="${not #lists.isEmpty(list)}" th:each="item : ${list}">
-                <td style="vertical-align: middle"><input type="checkbox" aria-label="Checkbox for following text input"></td>
-                <td style="vertical-align: middle"><img class="img-thumbnail" width="100" height="100" th:src="@{${item.product.imagePath}}"></td>
-                <td style="vertical-align: middle"><h3 th:text="${item.product.name}"></h3></td>
-                <td style="vertical-align: middle">
-                    <span id="price" th:text="${item.product.price}"></span>
-                    <span> x </span>
-                    <span id="cnt" th:text="${item.quantity}"></span>
-                    <span> = </span>
-                    <span id="totPrice" th:text="${item.product.price*item.quantity}"></span>
-                </td>
-                <td style="vertical-align: middle" width="10%">
-                    <div style="padding-bottom: 10px">
-                        <input type="text" class="underline" style="text-align: center" size="3" value="1">
-                    </div>
-                    <div>
-                        <h5><a href="#" class="badge badge-dark" role="button" aria-pressed="true"><small>변경</small></a></h5>
-                    </div>
-                </td>
-                <td style="vertical-align: middle" width="10%">
-                    <div style="padding-bottom: 7px">
-                        <a href="#" class="btn btn-dark btn-sm" role="button" aria-pressed="true"><small>주문하기</small></a>
-                    </div>
-                    <div>
-                        <a href="#" class="btn btn-secondary btn-sm active" role="button" aria-pressed="true"><small>삭제</small></a>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+        <form id="basketForm" th:action="@{/orders/orderform}" method="post">
+            <table class="table" style="text-align: center;">
+                <thead class="thead-dark">
+                <tr>
+                    <td scope="col"><input type="checkbox" aria-label="Checkbox for following text input"></td>
+                    <td scope="col" colspan="3">제품</td>
+                    <td scope="col">수량</td>
+                    <td scope="col"></td>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:if="${not #lists.isEmpty(list)}" th:each="item : ${list}">
+                    <td style="vertical-align: middle"><input type="checkbox" th:attrappend="id=${item.product.id}"></td>
+                    <td style="vertical-align: middle"><img class="img-thumbnail" width="100" height="100" th:src="@{${item.product.imagePath}}"></td>
+                    <td style="vertical-align: middle"><h3 th:text="${item.product.name}"></h3></td>
+                    <td style="vertical-align: middle">
+                        <span id="price" th:text="${item.product.price}"></span>
+                        <span> x </span>
+                        <span id="cnt" th:text="${item.quantity}"></span>
+                        <span> = </span>
+                        <span id="totPrice" th:text="${item.product.price*item.quantity}"></span>
+                        <input type="hidden" name="productId" th:attrappend="id='id_'+${item.product.id}" th:value="${item.product.id}">
+                    </td>
+                    <td style="vertical-align: middle" width="10%">
+                        <div style="padding-bottom: 10px">
+                            <input type="text" class="underline" style="text-align: center" size="3" value="1">
+                        </div>
+                        <div>
+                            <h5><a href="#" class="badge badge-dark" role="button" aria-pressed="true"><small>변경</small></a></h5>
+                        </div>
+                    </td>
+                    <td style="vertical-align: middle" width="10%">
+                        <div style="padding-bottom: 7px">
+                            <button type="button" class="btn btn-dark btn-sm" th:onclick="'javascript:orderOne(' + ${item.product.id} + ')'"><small>주문하기</small></button>
+                        </div>
+                        <div>
+                            <a href="#" class="btn btn-secondary btn-sm active" role="button" aria-pressed="true"><small>삭제</small></a>
+                        </div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
         <!--<div th:if="${not #lists.isEmpty(list)}" th:each="item : ${list}">
             상품구매금액 <span id="purchaseTot"></span>
             + 배송비 <span>0</span>
@@ -67,9 +101,10 @@
             <a href="#" class="btn btn-dark btn-sm" role="button" aria-pressed="true"><small>장바구니 비우기</small></a>
         </div>
         <div class="text-center" style="padding-top: 30px; padding-bottom: 80px">
-            <a href="#" class="btn btn-dark btn-sm active" role="button" aria-pressed="true"><small>전체상품주문</small></a>
-            <a href="#" class="btn btn-dark btn-sm active" role="button" aria-pressed="true"><small>선택상품주문</small></a>
-            <a href="#" class="btn btn-dark btn-sm active" role="button" aria-pressed="true"><small>쇼핑계속하기</small></a>
+            <button type="submit" class="btn btn-dark btn-sm active"><small>전체상품주문</small></button>
+            <button type="button" id="orderSelected" class="btn btn-dark btn-sm active"><small>선택상품주문</small></button>
+            <a th:href="@{/products}" class="btn btn-dark btn-sm active" role="button" aria-pressed="true"><small>쇼핑계속하기</small></a>
         </div>
+        </form>
     </div>
 </th:block>
