--- a/src/main/resources/templates/wishlist/listform.html
+++ b/src/main/resources/templates/wishlist/listform.html
@@ -48,7 +48,7 @@
                                 <thead>
                                 <tr>
                                     <td width="10%"></tdwidth>
-                                    <th width="10%">id</th>
+                                    <th width="10%">번호</th>
                                     <th>상품명</th>
                                     <th width="25%">사용자</th>
                                 </tr>
