--- a/src/main/resources/templates/products/list.html
+++ b/src/main/resources/templates/products/list.html
@@ -16,7 +16,25 @@
             margin: 10px;
         }
     </style>
+    <script>
+        function addWishlist(id){
+            $.ajax({
+                url : '/api/users/add',
+                method : 'post',
+                data : {"id" : id},
 
+                dataType: "text",
+                success : function (data) {
+                    alert(data);
+                    console.log(data);
+                },
+                error : function (err) {
+                    console.log(err.toString());
+                }
+            });
+        }
+
+    </script>
 </th:block>
 <th:block layout:fragment="body_main">
     <br><br>
@@ -51,8 +69,7 @@
                         <div class="card-columns">
                             <div class="card" th:if="${not #lists.isEmpty(list.getContent())}" th:each="product : ${list}">
                                 <div style="text-align: right; margin: 5px">
-                                    <a th:href="@{/api/users/add}" th:id="${product.id}">
-
+                                    <a href="javascript:void(0);" th:onclick="'javascript:addWishlist(' + ${product.id} + ')'">
                                         <svg class="i-heart" id="heart" viewBox="0 0 32 32" width="20" height="20" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                                             <path d="M4 16 C1 12 2 6 7 4 12 2 15 6 16 8 17 6 21 2 26 4 31 6 31 12 28 16 25 20 16 28 16 28 16 28 7 20 4 16 Z" />
                                         </svg>
